# mllib

./: .gitignore  Makefile  default.nix  hie.yaml  ml-lib.cabal  mllib.cabal  package.yaml  stack.yaml
app/: H2048UI.hs
src/: DecisionTree.hs  H2048.hs  H2048AI.hs
src/AI/H2048/: Core.hs  Expt.hs  Minmax.hs
test/: Spec.hs
