name:                ml-lib
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Enzo-Liu/ml-lib#readme
license:             BSD3
license-file:        LICENSE
author:              Enzo Liu
maintainer:          liuenze6516@gmail.com
copyright:           Copyright: (c) 2016 Enzo Liu
category:            personal
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , DecisionTree
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
  default-language:    Haskell2010

executable ml-lib-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ml-lib
  default-language:    Haskell2010

test-suite ml-lib-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ml-lib
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Enzo-Liu/ml-lib
